Update swagger documentation.
